--- a/.github/workflows/sync-version.yml
+++ b/.github/workflows/sync-version.yml
@@ -1,4 +1,4 @@
-name: Sync Version and release
+name: Sync Version and Release
 
 on:
   repository_dispatch:
@@ -13,18 +13,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # -----------------------------
-      # Checkout repository
-      # -----------------------------
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.PAT }}
           fetch-depth: 0
 
-      # -----------------------------
-      # Read incoming version
-      # -----------------------------
       - name: Set VERSION
         run: |
           VERSION="${{ github.event.client_payload.version }}"
@@ -35,64 +29,47 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "Incoming version: $VERSION"
 
-      # -----------------------------
-      # Read current version
-      # -----------------------------
       - name: Read current version
         run: |
           CURRENT=$(jq -r '.version' composer.json)
           echo "CURRENT_VERSION=$CURRENT" >> $GITHUB_ENV
           echo "Local version: $CURRENT"
 
-      # -----------------------------
-      # Skip if same version
-      # -----------------------------
       - name: Skip if version matches
         run: |
           if [ "$VERSION" = "$CURRENT_VERSION" ]; then
-            echo "✔ Version already up to date."
+            echo "Version already up to date."
             exit 0
           fi
 
-      # -----------------------------
-      # Create release branch
-      # -----------------------------
-      - name: Create branch
+      - name: Create release branch
         run: |
+          git checkout master
+          git pull origin master
           BRANCH="release-v${VERSION}"
           git checkout -b "$BRANCH"
           echo "BRANCH=$BRANCH" >> $GITHUB_ENV
 
-      # -----------------------------
-      # Update composer.json
-      # -----------------------------
       - name: Update composer.json
         run: |
           jq ".version = \"$VERSION\"" composer.json > tmp.json
           mv tmp.json composer.json
 
-
-      # --------------------------------------------
-      # Commit & push
-      # --------------------------------------------
-      - name: Commit & push
+      - name: Commit and push changes
         run: |
-          git config user.name "srkdev404-cyber"
-          git config user.email "srkdev404@gmail.com"
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
           git add composer.json
-
           git commit -m "chore: sync version to v${VERSION}" || echo "Nothing to commit"
           git push origin "$BRANCH"
- 
-      # --------------------------------------------
-      # Create Pull Request 
-      # --------------------------------------------
+
       - name: Create Pull Request
         env:
           GH_TOKEN: ${{ secrets.PAT }}
         run: |
           gh pr create \
             --base master \
-            --head release-v${VERSION} \
+            --head "$BRANCH" \
             --title "Release v${VERSION}" \
-            --body "release: yes"
+            --body "release: yes" \
+            || echo "Pull request may already exist"
