--- a/.github/workflows/sync-version.yml
+++ b/.github/workflows/sync-version.yml
@@ -19,6 +19,68 @@ jobs:
           token: ${{ secrets.PAT }}
           fetch-depth: 0
 
+
+      # --------------------------------------------
+      # Load & validate version (from primary repo)
+      # --------------------------------------------
+      - name: Load & validate version
+        run: |
+          VERSION="${{ github.event.client_payload.version }}"
+          VERSION="${VERSION//,/\.}"
+ 
+          if [ -z "$VERSION" ]; then
+            echo "❌ Version missing in dispatch payload"
+            exit 1
+          fi
+ 
+          if ! [[ "$VERSION" =~ ^[0-9]+\.[0-9]+\.[0-9]+(-[0-9A-Za-z.-]+)?$ ]]; then
+            echo "❌ Invalid version format: $VERSION"
+            exit 1
+          fi
+ 
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "Dispatching version $VERSION"
+ 
+      # --------------------------------------------
+      # Compare current version vs incoming version
+      # --------------------------------------------
+      - name: Compare current version
+        run: |
+          CURRENT_VERSION=$(jq -r '.version' composer.json)
+ 
+          if [ -z "$CURRENT_VERSION" ] || [ "$CURRENT_VERSION" = "null" ]; then
+            echo "Unable to determine current version from composer.json"
+            exit 1
+          fi
+ 
+          echo "Current version : $CURRENT_VERSION"
+          echo "Incoming version: $VERSION"
+ 
+          if [ "$CURRENT_VERSION" = "$VERSION" ]; then
+            echo "Versions are identical. Denying PR creation."
+            exit 0
+          fi
+ 
+          echo "Version change detected. Proceeding."
+ 
+      # --------------------------------------------
+      # Prepare release branch
+      # --------------------------------------------
+      - name: Prepare release branch
+        run: |
+          BRANCH="release-v${VERSION}"
+          echo "BRANCH=$BRANCH" >> $GITHUB_ENV
+ 
+          git fetch origin
+ 
+          if git ls-remote --heads origin "$BRANCH" | grep -q "$BRANCH"; then
+            git checkout "$BRANCH"
+            git pull origin "$BRANCH"
+          else
+            git checkout -b "$BRANCH"
+          fi
+
+
       - name: Read current version
         run: |
           CURRENT=$(jq -r '.version' composer.json)
